--- a/app/elements/editor/code-editor.html
+++ b/app/elements/editor/code-editor.html
@@ -4,7 +4,7 @@
   <style>
     #editor {
       position: absolute;
-      top: 0;
+      top: 65px;
       right: 0;
       bottom: 0;
       left: 0;
@@ -12,8 +12,7 @@
   </style>
 
   <template>
-    <div id="editor">
-function foo(){
+    <div id="editor">function foo(){
   return bar;
 }
     </div>
@@ -28,8 +27,8 @@ function foo(){
         console.log(this.$.editor.innerText);
         var editor = ace.edit(this.$.editor);
         editor.setTheme("ace/theme/iplastic");
+        //TODO: un-hardcode the programming language
         editor.getSession().setMode("ace/mode/javascript");
-
       }
 
     });
