--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -17,10 +17,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     // More info: https://visionmedia.github.io/page.js/
     page('/', function () {
       app.route = 'home';
+      document.getElementById("main-page-header").innerHTML = "<home-header></home-header>"
     });
 
     page('/codingGround', function () {
       app.route = 'codingGround';
+      document.getElementById("main-page-header").innerHTML = "<editor-header></editor-header>"
     });
 
     // add #! before urls
