basic functionality for sending code and recieving response

--- a/app/elements/editor/code-editor.html
+++ b/app/elements/editor/code-editor.html
@@ -1,4 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../../bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
 <dom-module id="code-editor">
   <style>
@@ -6,33 +9,96 @@
       position: absolute;
       top: 65px;
       right: 0;
-      bottom: 0;
       left: 0;
+      bottom: 25%;
     }
+    paper-toolbar{
+      position: absolute;
+      top: 75%;
+      left: 0;
+      right: 0;
+      height: 7%;
+      background-color: #66b8da;
+    }
+
+    iron-autogrow-textarea{
+      border: none;
+      position: absolute;
+      width: 100%;
+      top: 82%;
+      height: 16.6%;
+      max-height: 16.6%;
+      left: 0;
+      right: 0;
+    }
+
   </style>
 
   <template>
-    <div id="editor">function foo(){
-  return bar;
-}
+
+    <iron-ajax
+      id="ajaxRequest"
+      handle-as="json"
+      on-response="onresponse"
+      debounce-duration="1000"
+      content-type="application/json"
+      >
+    </iron-ajax>
+
+    <div class="vertical layout" style="display: block">
+
+      <div id="editor">function foo(){return bar;}</div>
+
+      <paper-toolbar>
+        <div class="horizontal layout">
+
+          <button id="runCode" on-click="runcode" >Test</button>
+
+          <select id="programmingLanguage">
+            <option>Javascript</option>
+            <option>Java</option>
+            <option>C#</option>
+            <option></option>
+          </select>
+
+        </div>
+      </paper-toolbar>
+
+      <iron-autogrow-textarea id="console" readonly></iron-autogrow-textarea>
+
+
     </div>
+
+
   </template>
 
   <script src="../../scripts/ace_editor/src-min/ace.js" type="application/javascript"></script>
 
   <script>
     Polymer({
-      is: "code-editor",
-      ready: function(){
-        console.log(this.$.editor.innerText);
-        var editor = ace.edit(this.$.editor);
-        editor.setTheme("ace/theme/iplastic");
-        //TODO: un-hardcode the programming language
-        editor.getSession().setMode("ace/mode/javascript");
-      }
-
-    });
+        is: "code-editor",
+        properties: {
+          editor: Object
+        },
+        ready: function(){
+          //initialize the code editor
+          this.editor = ace.edit(this.$.editor);
+          this.editor.setTheme("ace/theme/iplastic");
+          //TODO: un-hardcode the programming language
+          this.editor.getSession().setMode("ace/mode/java");
+        },
+        runcode: function(){
+          var code = this.editor.getValue();
+          this.$.ajaxRequest.method='POST';
+          this.$.ajaxRequest.body = JSON.stringify({'code': code, 'language': 'javascript'});
+          this.$.ajaxRequest.url='http://localhost:8080/testRoute';
+          this.$.ajaxRequest.generateRequest();
+        },
+        onresponse: function(request){
+          console.log(request.detail.response);
+          //TODO: dont forget to actually update this when i get a real response
+          this.$.console.textarea.value = request.detail.response.code;
+        }
+      });
   </script>
-
-
 </dom-module>
