--- a/app/elements/editor/editor-header.html
+++ b/app/elements/editor/editor-header.html
@@ -19,10 +19,7 @@
 
   <script>
     Polymer({
-      is:"editor-header",
-      ready: function(){
-        console.log("Can you please work?");
-      }
+      is:"editor-header"
     })
 
   </script>
