externalized console, styling

--- a/app/elements/home/home-header.html
+++ b/app/elements/home/home-header.html
@@ -1,18 +1,18 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 
 <dom-module id="home-header">
+  <style>
+    paper-toolbar{
+      height: 100%;
+    }
+  </style>
+
+
   <template>
     <!-- Main Toolbar -->
-    <paper-toolbar id="mainToolbar" >
-      <paper-icon-button id="paperToggle" icon="menu"></paper-icon-button>
-      <span class="flex"></span>
-
-      <!-- Toolbar icons -->
-      <paper-icon-button icon="refresh"></paper-icon-button>
-      <paper-icon-button icon="search"></paper-icon-button>
-
+    <paper-toolbar id="mainToolbar">
       <!-- Application name -->
-      <div class="middle paper-font-display2 app-name">Instructions</div>
+      <div>Instructions</div>
 
       <!-- Application sub title -->
       <div class="bottom title"></div>
@@ -22,8 +22,8 @@
 
   <script>
     Polymer({
-      is:"home-header"
-    })
+      is:'home-header'
+    });
 
   </script>
 
