--- a/app/elements/editor/editor-console.html
+++ b/app/elements/editor/editor-console.html
@@ -59,6 +59,7 @@
         editor: Object
       },
      ready: function(){
+       this.$.console.textarea.value = "TEST TEXR";
         console.log(this.testProp);
         console.log(this.editor);
       },
