--- a/app/index.html
+++ b/app/index.html
@@ -67,13 +67,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div drawer>
 
         <!-- Drawer Toolbar -->
-        <paper-toolbar id="drawerToolbar">
+        <paper-toolbar id="drawerToolbar" class="header">
           <!--TODO: logo goes here, before Coduno-->
-          <span class="paper-font-title">Coduno</span>
+          <span>Coduno</span>
         </paper-toolbar>
 
         <!-- Drawer Content -->
-          <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
+          <paper-menu class="list content" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
               <a data-route="home" href="/">
                 <iron-icon icon="home"></iron-icon>
                 <span>Home</span>
@@ -85,10 +85,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </a>
           </paper-menu>
       </div>
-      <paper-header-panel main >
+      <paper-header-panel main>
 
         <!-- Main Toolbar -->
-        <div id="main-page-header"></div>
+        <div id="main-page-header" class="header"></div>
 
         <!-- Main Content -->
         <div class="content">
