--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
 
             <section data-route="codingGround">
-              <code-editor style="height: 100%"></code-editor>
+              <code-editor></code-editor>
             </section>
 
             <section data-route="unauthorized">
