--- a/app/elements/editor/code-editor.html
+++ b/app/elements/editor/code-editor.html
@@ -1,4 +1,3 @@
-<link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../editor-console/editor-console.html">
 
 
@@ -23,7 +22,7 @@
 
   </template>
 
-  <script src="../../../bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
+  <script src="../../bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
   <script>
     Polymer({
       is: 'code-editor',
@@ -39,4 +38,3 @@
 
   </script>
 </dom-module>
-
