--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -1,8 +1,8 @@
-<script src="../../bower_components/page/page.js"></script>
+<script src="../bower_components/page/page.js"></script>
 <script src="../scripts/util.js"></script>
 <script>
   window.addEventListener('WebComponentsReady', function() {
-    page('/', function () {
+    page('/home', function () {
       checkLoggedIn();
       app.route = 'home';
       document.getElementById('main-page-header').innerHTML = '<home-header></home-header>';
@@ -16,7 +16,7 @@
         if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
           if(xmlhttp.status == 200){
             document.cookie = "loggedIn=true";
-            page.redirect("/")
+            page.redirect("/home")
           }else if(xmlhttp.status == 401){
             page.redirect("/unauthorized")
           }else{
@@ -26,7 +26,7 @@
       };
 
       xmlhttp.withCredentials = true;
-      xmlhttp.open("GET","http://localhost:8080/api/token/check/" + token,true);
+      xmlhttp.open("GET","/api/token/check/" + token,true);
       xmlhttp.send();
     });
 
