--- a/app/elements/editor-console/editor-console.html
+++ b/app/elements/editor-console/editor-console.html
@@ -49,10 +49,9 @@
 
           <select id="language" on-change="setLanguage">
             <option value="java">Java</option>
-            <option value="python2.7">Python 2.7</option>
-            <option value="python3.4">Python 3.4</option>
-            <option value="cpp">C/C++</option>
-            <option value="javascript">Javascript</option>
+            <option value="py">Python</option>
+            <option value="c">C</option>
+            <option value="cpp">C++</option>
           </select>
         </div>
       </paper-toolbar>
