--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -1,39 +1,23 @@
 <script src="../bower_components/page/page.js"></script>
 <script src="../scripts/util.js"></script>
+<script src="../bower_components/js-base64/base64.js"></script>
 <script>
   window.addEventListener('WebComponentsReady', function() {
-    page('/home', function () {
-      checkLoggedIn();
-      app.route = 'home';
-      document.getElementById('main-page-header').innerHTML = '<home-header></home-header>';
-    });
-
     page('/token/:token', function(context){
       var token = context.params.token;
-      var xmlhttp = new XMLHttpRequest();
-
-      xmlhttp.onreadystatechange = function() {
-        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-          if(xmlhttp.status == 200){
-            document.cookie = "loggedIn=true";
-            page.redirect("/home")
-          }else if(xmlhttp.status == 401){
-            page.redirect("/unauthorized")
-          }else{
-            page.redirect("/error")
-          }
-        }
-      };
-
-      xmlhttp.withCredentials = true;
-      xmlhttp.open("GET","/api/token/check/" + token,true);
-      xmlhttp.send();
+      console.log(token)
+      if (Base64.extendString) {
+        Base64.extendString();
+        var decodedToken = token.fromBase64().split(":");
+        app.requestData(decodedToken[0])
+      }
+      page.redirect("/codingGround")
     });
 
     page('/codingGround', function () {
       checkLoggedIn();
       app.route = 'codingGround';
-      document.getElementById('main-page-header').innerHTML = '<editor-header></editor-header>';
+      app.header = "Coding ground"
     });
 
     page('/unauthorized', function(){
