--- a/app/elements/editor-console/javaut/javaut-output.html
+++ b/app/elements/editor-console/javaut/javaut-output.html
@@ -1,11 +1,10 @@
 <dom-module id="javaut-output">
-
     <style>
       .inline{
         display: inline;
       }
       p{
-        font-family: "Lucida Console", Monaco, monospace
+        font-family: "Lucida Console", Monaco, monospace;
       }
     </style>
   <template>
