--- a/app/elements/editor-console/output-test/output-test-console.html
+++ b/app/elements/editor-console/output-test/output-test-console.html
@@ -1,41 +1,15 @@
-<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
-
 <dom-module id="output-test-console">
 
   <style>
-
-    #console-container{
+    #consoleContainer{
       height: 20%;
     }
 
-    #consoleTabs{
+    #consoleOutput{
       border: none;
       position: relative;
       width: 100%;
       height: 80%;
-      max-height: 80%;
-      left: 0;
-      right: 0;
-    }
-
-    .button-toolbar{
-      background-color: #3f51b5;
-      height: 20%;
-    }
-
-    #languageContainer{
-      padding-top: 10px;
-      padding-left: 1%;
-    }
-    paper-icon-button{
-      padding-left: 1%;
-    }
-    iron-autogrow-textarea{
-      border: none;
-      position: relative;
-      width: 100%;
-      height: 150px;
       max-height: 80%;
       left: 0;
       right: 0;
@@ -50,34 +24,13 @@
     }
 
     p{
-      font-family: "Lucida Console", Monaco, monospace
+      font-family: "Lucida Console", Monaco, monospace;
     }
   </style>
 
   <template>
-    <iron-ajax
-      id="ajaxRequest"
-      handle-as="json"
-      on-response="onResponse"
-      debounce-duration="1000"
-      content-type="application/json"
-      >
-    </iron-ajax>
-
-    <div id="console-container">
-
-      <div class="horizontal layout">
-        <paper-icon-button src="../../../images/start.png" on-click="runCode">Run code</paper-icon-button>
-        <div id="languageContainer">
-          <select id="language" on-change="setLanguage">
-            <template is="dom-repeat" items="{{availableLanguages}}">
-              <option value="{{item.tag}}">{{item.name}}</option>
-            </template>
-          </select>
-        </div>
-      </div>
-
-      <iron-pages id="consoleTabs" selected="{{selectedConsole}}">
+    <div id="consoleContainer">
+      <iron-pages id="consoleOutput" selected="{{selectedConsole}}">
         <div>
           <p>Console output</p>
         </div>
@@ -86,13 +39,60 @@
         </div>
         <div>
           <template is="dom-repeat" items="{{items}}">
-            <p class$="{{getFuckingClass(index)}}">{{item}}</p>
+            <p class$="{{getClass(index)}}">{{item}}</p>
           </template>
+        </div>
+        <div>
+          <p>Error</p>
         </div>
       </iron-pages>
     </div>
 
   </template>
   <script src="../../../scripts/util.js" type="application/javascript"></script>
-  <script src="output-test-console.js" type="application/javascript"></script>
+  <script>
+   Polymer({
+     is: 'output-test-console',
+     properties:{
+       selectedConsole:{
+         type: String
+       },
+       items:{
+         type: Array,
+         notify: true
+       }
+     },
+
+     ready: function(){
+       this.bg = "green";
+       this.selectedConsole = "0";
+     },
+     setOutput: function(data){
+       var output = ""
+       if(data!=undefined){
+         if(data.Stderr != ""){
+           output = data.Stderr !="" && data.Stderr!=undefined ? data.Stderr : data.Stdout
+         }else{
+           this.diffLines = data.DiffLines
+           this.items = data.Stdout.split("\n");
+         }
+       }else{
+         output = "Bad request"
+       }
+     },
+     getClass: function(index){
+       console.log(index)
+       for(var i=0;i<this.diffLines.length;i++){
+         if(index==this.diffLines[i]){
+           return "red";
+         }
+       }
+       return "green";
+     },
+     setConsole: function(console){
+       // TODO(victorbalan): Make console receive a text.
+       this.selectedConsole = console;
+     }
+   });
+ </script>
 </dom-module>
