--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -31,8 +31,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="home/home-page.html">
-<link rel="import" href="editor/code-editor.html">
+<link rel="import" href="challenge/challenge-page.html">
+<link rel="import" href="challenge/challenge-display.html">
+<link rel="import" href="challenge/tasks/task-display.html">
+<link rel="import" href="editor-console/simple/simple-console.html">
+<link rel="import" href="editor-console/javaut/javaut-console.html">
+<link rel="import" href="editor-console/output-test/output-test-console.html">
+<link rel="import" href="editor-console/language-selector.html">
+<link rel="import" href="editor-console/code-editor.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
